# pyclickpos

./: NOTICE.txt  README.md  pyclickpos.py  requirements.txt  setup.cfg
scripts/: install-libs-for-release.ps1  reinstall-localpyclickpos.ps1  release.ps1  test-release.ps1
