[metadata]
name = pyclickpos
version = 1.0.0
license = Apache License, Version 2.0
maintainer = Koki NAKAMURA
maintainer_email = koki.nakamura22@gmail.com
author = Koki NAKAMURA
description = Get click position (x, y).
long_description = Please read README.md on github repository: https://github.com/koki-nakamura22/pyclickpos
project_urls =
   Source Code = https://github.com/koki-nakamura22/pyclickpos
classfiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    INTENDED AUDIENCE :: DEVELOPERS

[options.entry_points]
console_scripts =
    pyclickpos = pyclickpos:main
